fixes for embed-iframe on mobile (buda-base/public-digital-library#405)

--- a/css/less/main-menu.less
+++ b/css/less/main-menu.less
@@ -149,6 +149,14 @@
   .mirador-osd { height: ~"calc(100% - 60px)"; }
 }
 
+@media(max-width:768px) {
+  #viewer.embed { 
+    .nav-bar-top { padding:0 10px; 
+    
+      a#collec { padding-left:0;}
+    }
+  }
+}
 
 /*
 .nav-bar-top div { display:flex; align-items:center; }
