--- a/css/less/osd-hud.less
+++ b/css/less/osd-hud.less
@@ -514,6 +514,7 @@
     z-index:1;
 
     & + .ui-selectmenu-menu { 
+      z-index:110;
       max-height:210px;
       //border:1px solid #D73449 ;
       overflow:auto;
